--- a/mdx/02-npm.mdx
+++ b/mdx/02-npm.mdx
@@ -81,7 +81,7 @@ available via 'npm run-script':
 
 ---
 
-## Temporarily download & run a node module
+## Temp download and run a node module
 
 <Appear top={5}>
     <>
