--- a/mdx/03-git.mdx
+++ b/mdx/03-git.mdx
@@ -59,7 +59,7 @@ eval "\$(hub alias -s)"
 
 ---
 
-## List your most recent local git branches
+## List most recent local git branches
 
 Install the following `git` alias to show your recent branches
 
@@ -79,7 +79,7 @@ defect-oops-forgot-about-this
 
 ---
 
-## Automatically run npm tasks on git hooks
+## Auto run npm tasks on git hooks
 
 Locally install `husky` in your project.
 
