--- a/mdx/04-tools.mdx
+++ b/mdx/04-tools.mdx
@@ -65,7 +65,7 @@ trash safely-delete-file.js
 
 ---
 
-## View your local weather on the terminal
+## Graphically view your local weather
 
 <Appear top={5}>
     <>
@@ -98,7 +98,7 @@ brew install htop
 
 ---
 
-## Test your internet speed from Terminal
+## Test your internet speed
 
 -   [speed-test](https://github.com/sindresorhus/speed-test)
 -   Test your internet connection speed and ping using speedtest.net from the CLI
@@ -135,7 +135,7 @@ brew install ncdu
 
 ---
 
-## Quickly navigate folders on the Terminal
+## Quickly navigate folders
 
 * [ranger](https://ranger.github.io/) - ranger is a console file manager with VI key bindings.
 
@@ -145,7 +145,7 @@ brew install ranger
 
 ---
 
-## View Simple Community-Driven man pages
+## Use Simple Community-Driven man pages
 
 - [tldr](https://tldr.sh/) - The TLDR pages are a community effort to simplify the beloved man pages with practical examples.
 
