--- a/mdx/06-custom.mdx
+++ b/mdx/06-custom.mdx
@@ -1,4 +1,6 @@
-# Create Custom Programs
+# Custom Programs
+
+<!-- -->
 
 ---
 
@@ -64,7 +66,7 @@ echo "Finished building."
 
 ---
 
-## Create a Slack bot to Stalk your Friends
+## Create an Annoying Slack bot
 
 -   [Slack Stalker](https://gist.github.com/elijahmanor/935559868675c7c22b7c0da6721a57cd)
 
@@ -77,16 +79,17 @@ Tools used...
 
 ---
 
-## Heart Rate from Today
+## Heart Rate from Day of this talk
 
 <HeartRate top={5} left={4} src="heartrate-2019-11-19.csv" />
 
 ---
 
-## Heart Rate from Today
+## Heart Rate from Day of this talk
 
 Tools used...
 
+-   Exported csv file from my Amazfit Bip watch
 -   `fs` to read the csv file
 -   `csv-parse` to parse the csv file
 -   `date-fns` to format the time
@@ -108,7 +111,7 @@ If you'd like a standard CLI experience
 
 ---
 
-## Twenty-Fourty-Eight - Command Line Edition
+## Twenty-Fourty-Eight - CMD Edition
 
 -   [2048-cmd](https://github.com/elijahmanor/2048-cmd)
 
